--- a/09/Fonts/Fonts/Base.lproj/Main.storyboard
+++ b/09/Fonts/Fonts/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="moO-Ro-Oe3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Fonts-->
@@ -118,7 +119,8 @@
                                 </tableViewCellContentView>
                                 <animations/>
                                 <connections>
-                                    <segue destination="S2l-pJ-JCw" kind="show" id="mxS-3C-yWx"/>
+                                    <segue destination="S2l-pJ-JCw" kind="show" identifier="ShowFontSize" id="mxS-3C-yWx"/>
+                                    <segue destination="kae-AU-GRX" kind="show" identifier="ShowFontInfo" trigger="accessoryAction" id="N4Z-1b-CyS"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -180,6 +182,84 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jmc-tL-txV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2668" y="195"/>
+        </scene>
+        <!--Font Info View Controller-->
+        <scene sceneID="2tf-fK-Ars">
+            <objects>
+                <viewController id="kae-AU-GRX" customClass="FontInfoViewController" customModule="Fonts" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uxS-OS-gDk"/>
+                        <viewControllerLayoutGuide type="bottom" id="iVc-va-gEn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VF2-Wn-P7I">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owi-IK-EVw">
+                                <rect key="frame" x="20" y="64" width="560" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAE-re-QGC">
+                                <rect key="frame" x="21" y="554" width="42" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KwM-mV-PFb">
+                                <rect key="frame" x="531" y="517" width="51" height="31"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="toggleFavorites:" destination="kae-AU-GRX" eventType="valueChanged" id="XiY-TO-Qov"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Include in Favorite" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zue-fp-7E6">
+                                <rect key="frame" x="384" y="522" width="139" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="xDI-61-12K">
+                                <rect key="frame" x="69" y="550" width="519" height="31"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="slideFontSize:" destination="kae-AU-GRX" eventType="valueChanged" id="tIg-Jz-x5y"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="KwM-mV-PFb" secondAttribute="trailing" id="09h-XK-qBz"/>
+                            <constraint firstItem="EAE-re-QGC" firstAttribute="leading" secondItem="VF2-Wn-P7I" secondAttribute="leadingMargin" constant="1" id="1cl-1E-j19"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xDI-61-12K" secondAttribute="trailing" constant="-6" id="5H6-6z-KRi"/>
+                            <constraint firstItem="owi-IK-EVw" firstAttribute="top" secondItem="uxS-OS-gDk" secondAttribute="bottom" id="B8G-d1-wLi"/>
+                            <constraint firstItem="owi-IK-EVw" firstAttribute="leading" secondItem="VF2-Wn-P7I" secondAttribute="leadingMargin" id="InW-JG-FAT"/>
+                            <constraint firstItem="xDI-61-12K" firstAttribute="top" secondItem="KwM-mV-PFb" secondAttribute="bottom" constant="2" id="Uhr-hX-q27"/>
+                            <constraint firstItem="xDI-61-12K" firstAttribute="leading" secondItem="EAE-re-QGC" secondAttribute="trailing" constant="8" id="V2T-ul-ZUX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Zue-fp-7E6" secondAttribute="trailing" constant="57" id="W6T-KQ-HtF"/>
+                            <constraint firstItem="xDI-61-12K" firstAttribute="centerX" secondItem="VF2-Wn-P7I" secondAttribute="centerX" constant="28.5" id="eqq-xN-VLu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="owi-IK-EVw" secondAttribute="trailing" id="itU-Pi-sLK"/>
+                            <constraint firstItem="iVc-va-gEn" firstAttribute="top" secondItem="EAE-re-QGC" secondAttribute="bottom" constant="25" id="kyc-Fs-6mk"/>
+                            <constraint firstItem="KwM-mV-PFb" firstAttribute="leading" secondItem="Zue-fp-7E6" secondAttribute="trailing" constant="8" id="oNQ-nd-yre"/>
+                            <constraint firstItem="xDI-61-12K" firstAttribute="top" secondItem="Zue-fp-7E6" secondAttribute="bottom" constant="7" id="tTm-hZ-0OQ"/>
+                            <constraint firstItem="iVc-va-gEn" firstAttribute="top" secondItem="xDI-61-12K" secondAttribute="bottom" constant="20" id="yh9-fi-Zzo"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="favoriteSwitch" destination="KwM-mV-PFb" id="lLZ-iP-JjI"/>
+                        <outlet property="fontSampleLabel" destination="owi-IK-EVw" id="WqJ-HC-mRb"/>
+                        <outlet property="fontSizeLabel" destination="EAE-re-QGC" id="8nv-0l-ao6"/>
+                        <outlet property="fontSizeSlider" destination="xDI-61-12K" id="I35-hV-5Vm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qwf-ch-v26" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2668" y="889"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aU1-WU-q5U">
