--- a/10/StackViews/StackViews/Base.lproj/Main.storyboard
+++ b/10/StackViews/StackViews/Base.lproj/Main.storyboard
@@ -15,12 +15,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="eoZ-sG-hDX">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7VY-FI-m0D">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="747" misplaced="YES" image="image0" translatesAutoresizingMaskIntoConstraints="NO" id="dUL-oS-ZKC">
+                                        <rect key="frame" x="0.0" y="30" width="600" height="510"/>
+                                        <animations/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uZE-fI-aUL">
+                                        <rect key="frame" x="0.0" y="550" width="600" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="eoZ-sG-hDX" secondAttribute="trailing" id="Lis-Ir-us1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eoZ-sG-hDX" secondAttribute="bottom" id="M9g-SV-utr"/>
+                            <constraint firstItem="eoZ-sG-hDX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="UKk-xZ-ow8"/>
+                            <constraint firstItem="eoZ-sG-hDX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uIG-0l-wnB"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="288" y="294"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image0" width="809" height="1024"/>
+    </resources>
 </document>
